# backend

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  mirror-to-subedi-labs.yml  mirror.yml
app/: bootstrap.py  lifespan.py  main.py  persistence.py  runtime.py  settings.py
app/api/: chat.py  deps.py
app/db/: core.py
app/dependencies/: app_state.py  container.py
app/llms/: gemini.py
app/services/: chat.py
app/workflow/agents/homebrain/: graph.py  state.py
app/workflow/nodes/: finalize.py  ingest.py  router.py
app/workflow/utils/: messages.py
tests/: fakes.py
