[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy>=2.0",
  "psycopg[binary]",
  "langchain",
  "langgraph",
  "langchain-chroma",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "httpx>=0.28.1",
  "ruff>=0.9.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
