[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy>=2.0",
  "psycopg[binary,pool]",
  "langchain",
  "langgraph",
  "langgraph.checkpoint.postgres",
  "langchain_google_genai",
  "langchain-core",
  "langchain-chroma",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "httpx>=0.28.1",
  "ruff>=0.9.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PERF", "PIE", "RUF"]

[tool.ruff.format]
skip-magic-trailing-comma = false
